hphp/hack/test/typecheck/argument_unpacking/unpack_call12_infer.php.like_types.exp
File "unpack_call12_infer.php", line 11, characters 10-11:
Invalid return type (Typing[4110])
File "unpack_call12_infer.php", line 4, characters 49-55:
Expected ~vec<Tv> because it is an unenforceable type
File "unpack_call12_infer.php", line 5, characters 8-12:
But got vec<dynamic>
File "unpack_call12_infer.php", line 18, characters 21-22:
Invalid argument (Typing[4110])
File "unpack_call12_infer.php", line 22, characters 28-35:
Expected ~vec<int> because it is an unenforceable type
File "unpack_call12_infer.php", line 4, characters 49-55:
But got vec<string>
